Fix page display on mobile

--- a/covid_xrays/app/static/src/scss/templatemo-style.css
+++ b/covid_xrays/app/static/src/scss/templatemo-style.css
@@ -629,5 +629,5 @@ figure.effect-bubba:hover p {
 }
 
 @media screen and (max-width: 564px) {
-	.tm-banner-title { font-size: 2.8em; }
+	.tm-banner-title { font-size: 1.5em; }
 }
